@@ -9,6 +9,7 @@
     "base >= 2.0",
     "! space-age >= 2.0",
     "! quality",
+    "? elevated-rails",
     "(?) BrimStuff >= 1.0.6",
     "? icon_badges >= 1.1.9",
     "? Milestones >= 1.4.2",
