@@ -66,6 +66,7 @@ Date: 2024-12-08
     - Made basic slugs fire 3, and piercing  slugs fire 2.
     - Added a better chain for vanadium oxide unlocked in metalloids.
     - Added subgroups for coolants, lubricants and solid fuel recipes. yes we have that many.
+    - Added elevated rail comptability.
 
   Changes:
     - Changed CRT's recipe to take CRT framing and screens.
